--- a/app/src/main/res/layout/verses_list_items.xml
+++ b/app/src/main/res/layout/verses_list_items.xml
@@ -52,14 +52,11 @@
                 android:textStyle="bold" />
 
             <ImageButton
-
+                android:id="@+id/nextBtn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-
-                android:background="@drawable/circle"
-
+                android:background="@android:color/transparent"
                 android:padding="5dp"
-                app:tint="@color/white"
                 android:src="@drawable/baseline_keyboard_double_arrow_right_24" />
 
 
