--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="appColor">#9FFF8300</color>
+    <color name="appColor">#f58a07</color>
     <!--    <color name="appColor">#FF0000</color>-->
     <!--    <color name="color1">#8FF86767</color>-->
     <color name="appColor1">#ff6200</color>
