--- a/app/src/main/res/layout/fragment_verses_details.xml
+++ b/app/src/main/res/layout/fragment_verses_details.xml
@@ -79,12 +79,10 @@
                         android:src="@drawable/kalash" />
 
                     <ImageButton
-                        android:id="@+id/saveBtn"
+                        android:id="@+id/verseSaveBtn"
                         android:layout_width="40dp"
-
                         android:layout_height="40dp"
                         android:layout_gravity="end|center_vertical"
-
                         android:background="@drawable/circle"
                         android:src="@drawable/baseline_favorite_border_24"
                         />
