--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".View.fragments.HomeFragment">
@@ -111,7 +112,8 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-
+                            android:gravity="center_vertical"
+                            android:layout_gravity="center"
                             android:orientation="vertical">
 
                             <TextView
@@ -123,7 +125,7 @@
                                 android:padding="2dp"
                                 android:text="Verse of the day"
                                 android:textColor="@color/appColor1"
-                                android:textSize="15sp"
+                                android:textSize="17sp"
                                 android:textStyle="bold" />
 
                             <TextView
@@ -138,14 +140,22 @@
                                 android:textColor="@color/black"
                                 android:textSize="15sp" />
                         </LinearLayout>
-
                         <ImageView
-
                             android:layout_width="match_parent"
                             android:layout_height="150dp"
-                            android:alpha="0.15"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/krishna1" />
+                            android:alpha="0.2"
+                            android:src="@drawable/krsna" />
+
+                        <ImageButton
+                            android:id="@+id/copyBtn"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_gravity="end"
+                            android:background="@android:color/transparent"
+                            android:clickable="true"
+                            android:padding="5dp"
+                            android:src="@drawable/copy_svgrepo_com__1_"
+                            app:tint="@color/black" />
                     </com.google.android.material.card.MaterialCardView>
                 </LinearLayout>
 
